--- a/tets/style.css
+++ b/tets/style.css
@@ -1,9 +1,100 @@
-.figma-light body {
-    background-color: white;
-    color: blue;
-  }
-  
-  .figma-dark body {
-    background-color: black;
-    color: red;
-  }
+.button {
+  width: 100%;
+  height: 20%;
+  background-color: #2E2929;
+  color: #FFF;
+  font-family: "Alata", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: left;
+  padding: 10px;
+  transition: background-color 0.2s ease;
+  border-style: solid;
+  border-top: 1%;
+  border-top-color: #5C5470;
+  border-top-width: 1%;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  box-shadow: none;
+}
+
+.button:hover {
+  background-color: #3e3a3a;
+}
+
+.button:active {
+  background-color: #5C5470;
+}
+
+
+.button-cont {
+  display: flex;
+  height: 20%;
+}
+
+.half-button {
+  width: 50%;
+  height: 100%;
+  background-color: #2E2929;
+  color: #FFF;
+  font-family: "Alata", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-top: 1%;
+  border-top-style: solid;
+  border-top-color: #5C5470;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+
+#save {
+  border-right: 0.5%;
+  border-right-style: solid;
+  border-right-color: #5C5470;
+}
+
+.half-button:hover {
+  background-color: #3e3a3a;
+}
+
+#save:active {
+  background-color: #094E3D;
+}
+
+#close:active {
+  background-color: #610923;
+}
+
+
+.text {
+  color: #8E81AE;
+  font-family: "Alata", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 3%;
+  margin-top: -5%;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 25%;
+  background-color: #610923b4;
+  z-index: 2;
+}
+
+.popup-text {
+  margin-left: 2%;
+  margin-top: 2%;
+}
